mise en place du Docker et de postgre + connexion

--- a/API_RKonnect/appsetting.json
+++ b/API_RKonnect/appsetting.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebApiDatabase": "Host=localhost; Database=rKonnect; Username=petitRenard; Password=password2"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
